Fix board left and right padding/margin overlap with blocks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,8 +64,7 @@ section {
 }
 
 #center {
-    padding-top: 1px;
-    padding-bottom: 1px;
+    padding: 1px 0 1px 0;
 }
 
 #right {
